--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,8 +3,11 @@ html {
 }
 
 nav {
-  height: 52px;
-  background: #212121;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    height: 52px;
+    background: #212121;
 }
 
 .menu {
@@ -35,6 +38,8 @@ nav {
 }
 
 .subheader {
+    position: absolute;
+    width: 100%;
     height: 85px;
     background: rgba(0, 0, 0, .6);
 }
@@ -150,4 +155,70 @@ nav {
     text-transform: uppercase;
     color: #FFFFFF;
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
+}
+
+.reasons {
+    height: 850px;
+    padding: 20px 0 64px 0;
+}
+
+.reasons .label {
+    margin: 0 auto;
+    width: 115px;
+    height: 27px;
+    background: #000000;
+    font-weight: 400;
+    font-size: 11px;
+    text-align: center;
+    line-height: 27px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.reasons .reasons_header {
+    margin: 0;
+    margin-top: 32px;
+    font-weight: 700;
+    font-size: 38px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #222222;
+}
+
+.reasons .reasons_content {
+    margin-top: 16px;
+}
+
+.reasons .reason_item {
+    height: 100%;
+    margin: 9px 0;
+}
+
+.reasons .reason_img {
+    float: left;
+    margin: 18px 25px 18px 34px;
+    /* margin: 0 25px 0 33px; */
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    width: 116px;
+    height: 116px;
+    background: #1EACC7;
+    border-radius: 50%;
+}
+
+.reasons .reason_text {
+    display: block;
+    float: left;
+    width: 343px;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 21px;
+    color: #202020;
+}
+
+.reason_text span {
+    font-weight: 400;
+    font-size: 17px;
+    color: #1EACC7;
 }
