--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,10 +1,54 @@
-* 
-	font-family: 'Roboto', sans-serif 
+$blue_color_1: #1EACC7
+$blue_color_2: #1CA8C3
+$blue_color_3: #1FBAD6
+$red_color: #FF5656
 	
+	
+	
+	
+	
+	
+* 
+	font-family: 'Roboto', sans-serif
+
+.title
+	margin: 0 
+	margin-top: 32px 
+	font-weight: 700 
+	font-size: 38px 
+	text-align: center 
+	text-transform: uppercase 
+	color: #222222
+
+.subtitle
+	margin: 0
+	font-weight: 400
+	font-size: 17px
+	text-align: center
+
+
+.label 
+	margin: 0 auto 
+	width: 115px 
+	height: 27px 
+	background: #000000 
+	font-weight: 400 
+	font-size: 11px 
+	text-align: center 
+	line-height: 27px 
+	text-transform: uppercase 
+	color: #FFFFFF 
+
+
+header
+	position: relative
+	height: 50px
+
 nav 
-	position: sticky 
+	position: fixed
+	width: 100%
 	top: 0 
-	z-index: 2 
+	z-index: 10
 	height: 52px 
 	background: #212121 
 
@@ -14,25 +58,26 @@ nav
 	margin: 0 
 	padding: 14px 68px 
 	list-style-type: none 
-	.menu_link 
+	&_link 
 		font-style: normal 
 		font-weight: 300 
 		font-size: 15px 
 		color: #FFFFFF 
 		text-decoration: none 
-	.menu_divider 
+	&_divider 
 		border-right: 2px dotted black 
 
 .subheader 
 	position: absolute 
+	top: 50px
 	width: 100% 
 	height: 85px 
 	background: rgba(0, 0, 0, .6) 
-	.subheader_logo 
+	&_logo 
 		display: block 
 		max-width: 100% 
 		margin-top: 16px 
-	.subheader_official 
+	&_official 
 		opacity: 0.5 
 		margin-top: 6px 
 		line-height: 13px 
@@ -40,7 +85,7 @@ nav
 		font-weight: 100 
 		font-size: 13px 
 		color: #FFFFFF 
-	.subheader_btn 
+	&_btn 
 		margin-top: 19px 
 		width: 172px 
 		height: 46px 
@@ -54,7 +99,7 @@ nav
 		text-transform: uppercase 
 		color: #FFFFFF 
 		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21) 
-	.subheader_call 
+	&_call 
 		margin-top: 23px 
 		line-height: 12px 
 		font-style: normal 
@@ -62,7 +107,7 @@ nav
 		font-size: 12px 
 		text-align: right 
 		color: #FFFFFF 
-	.subheader_phone 
+	&_phone 
 		margin-top: 8px 
 		line-height: 12px 
 		display: block 
@@ -81,7 +126,7 @@ nav
 	min-height: 800px 
 	padding: 143px 0 186px 0 
 	background: url("../img/bg/uber_bg.png") center center/cover no-repeat 
-	.promo_header 
+	&_header 
 		margin: 0 
 		line-height: 50px 
 		font-weight: 900 
@@ -89,7 +134,7 @@ nav
 		text-align: center 
 		text-transform: uppercase 
 		color: #FFFFFF 
-	.promo_subheader 
+	&_subheader 
 		margin: 0 
 		margin-top: 14px 
 		font-weight: 700 
@@ -97,14 +142,14 @@ nav
 		text-align: center 
 		text-transform: uppercase 
 		color: #FFFFFF 
-	.promo_descr 
+	&_descr 
 		margin-top: 16px 
 		font-weight: 400 
 		font-size: 18px 
 		line-height: 24px 
 		text-align: center 
 		color: #FFFFFF 
-	.promo_btn 
+	&_btn 
 		margin: 0 auto 
 		margin-top: 115px 
 		display: block 
@@ -123,48 +168,121 @@ nav
 		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
 
 .reasons 
-	padding: 20px 0 64px 0 
-	.label 
-		margin: 0 auto 
-		width: 115px 
-		height: 27px 
-		background: #000000 
-		font-weight: 400 
-		font-size: 11px 
-		text-align: center 
-		line-height: 27px 
-		text-transform: uppercase 
-		color: #FFFFFF 
-	.reasons_header 
-		margin: 0 
-		margin-top: 32px 
-		font-weight: 700 
-		font-size: 38px 
-		text-align: center 
-		text-transform: uppercase 
-		color: #222222 
-	.reasons_block 
+	padding: 20px 0 64px 0
+	&_block 
 		display: flex 
 		justify-content: center 
 		align-items: center 
 		margin-top: 35px 
-	.reasons_round 
+	&_round 
 		margin-right: 25px 
 		display: flex 
 		justify-content: center 
 		align-items: center 
 		min-width: 113px 
 		height: 113px 
-		background: #1EACC7 
+		background: $blue_color_1
 		border-radius: 50% 
-	.reasons_descr 
+	&_descr 
 		display: block 
 		width: 343px 
 		font-weight: 300 
 		font-size: 15px 
 		line-height: 21px 
 		color: #202020 
-	.reasons_subtitle 
+	&_subtitle 
 		font-weight: 400 
 		font-size: 17px 
-		color: #1EACC7 
+		color: $blue_color_1
+
+.mobile
+	min-height:864px 
+	padding: 46px 0 60px 0
+	background: url("../img/bg/mobile_bg.png") center center/cover no-repeat
+	.row
+		margin-top: 32px
+	&_item
+		position: relative
+		width: 320px
+		height: 280px
+		margin: 0 auto
+		margin-bottom: 20px
+		padding: 85px 0 34px 0
+		&_1
+			background: url("../img/card/card_1.png") center center/cover no-repeat
+		&_2
+			background: url("../img/card/card_2.png") center center/cover no-repeat
+		&_3
+			background: url("../img/card/card_3.png") center center/cover no-repeat
+		&_4
+			background: url("../img/card/card_4.png") center center/cover no-repeat
+		&_5
+			background: url("../img/card/card_5.png") center center/cover no-repeat
+		&_6
+			background: url("../img/card/card_6.png") center center/cover no-repeat
+		&_subtitle
+			text-align: center
+			font-weight: 400
+			font-size: 24px
+			line-height: 31px
+			text-transform: uppercase
+			color: #FFFFFF
+		&_plus
+			position: absolute
+			bottom: 34px
+			left: 50%
+			transform: translateX(-50%)
+			display: flex
+			justify-content: center
+			align-items: center
+			width: 30px
+			height: 30px
+			background-color: black
+			border-radius: 100%
+			&:after
+				content: ""
+				display: block
+				position: absolute
+				width: 14px
+				height: 2px
+				background: $blue_color_1
+			&:before
+				content: ""
+				display: block
+				position: absolute
+				width: 2px
+				height: 14px
+				background: $blue_color_1
+
+.choose
+	min-height: 397px
+	padding: 54px 0 137px 0
+	background: url("../img/bg/mobile_bg.png") center center/cover no-repeat
+	position: relative
+	.black_bg
+		position: absolute
+		height: 502px
+		width: 100%
+		background-color: #070716
+		top: 0
+		z-index: 1
+	.container
+		z-index: 2
+		position: relative
+	.label
+		background: #fff
+		color: #000
+	.title, .subtitle
+		color:#fff
+	.uber_car
+		display: block
+		margin: 0 auto
+		margin-top: 54px
+	&_descr
+		font-weight: 300
+		font-size: 17px
+		line-height: 24px
+		text-align: center
+		color: #222222
+	
+
