--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -269,12 +269,12 @@ nav
 	.container
 		z-index: 2
 		position: relative
-	.label
+	.label_white
 		background: #fff
 		color: #000
-	.title, .subtitle
+	.title_white, .subtitle_white
 		color:#fff
-	.uber_car
+	&_img
 		display: block
 		margin: 0 auto
 		margin-top: 54px
@@ -284,5 +284,39 @@ nav
 		line-height: 24px
 		text-align: center
 		color: #222222
-	
 
+.require
+	padding: 66px 0 57px 0
+	&_block
+		margin: 30px 0 30px 7px
+	&_title
+		color: $blue_color_2
+		font-weight: 400
+		font-size: 22px
+		line-height: 24px
+	&_list
+		list-style-type: none
+		padding: 0
+		margin-top: 20px
+		font-weight: 300
+		font-size: 17px
+		line-height: 24px
+		li
+			margin-left: 56px
+			margin-bottom: 5px
+			position: relative
+			&:before
+				content: ""
+				position: absolute
+				left: -31px
+				top: 1.5px
+				width: 21px
+				height: 21px
+				background: url("../img/icons/check/check_blue.svg")
+	&_descr
+		color: $blue_color_2
+		margin-top: 25px
+		margin-left: 7px
+		font-weight: 300
+		font-size: 17px
+		line-height: 24px
