--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -288,35 +288,42 @@ nav
 .require
 	padding: 66px 0 57px 0
 	&_block
-		margin: 30px 0 30px 7px
+		margin: 30px 0
 	&_title
 		color: $blue_color_2
 		font-weight: 400
 		font-size: 22px
 		line-height: 24px
 	&_list
+		max-width: 515px
 		list-style-type: none
 		padding: 0
+		margin: 0
+		padding-left: 57px
 		margin-top: 20px
 		font-weight: 300
 		font-size: 17px
 		line-height: 24px
 		li
-			margin-left: 56px
-			margin-bottom: 5px
+			margin-bottom: 10px
 			position: relative
 			&:before
 				content: ""
 				position: absolute
 				left: -31px
-				top: 1.5px
+				top: 2px
 				width: 21px
 				height: 21px
 				background: url("../img/icons/check/check_blue.svg")
 	&_descr
 		color: $blue_color_2
 		margin-top: 25px
-		margin-left: 7px
 		font-weight: 300
 		font-size: 17px
 		line-height: 24px
+	.warning
+		.require_title
+			color: $red_color
+		.require_list
+			li:before
+				background: url("../img/icons/check/check_red.svg")
