--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -202,7 +202,7 @@ nav
 .mobile
 	min-height:864px 
 	padding: 46px 0 60px 0
-	background: url("../img/bg/mobile_bg.png") center center/cover no-repeat
+	background: url("../img/bg/mobile_bg.svg") center center/cover no-repeat
 	.row
 		margin-top: 32px
 	&_item
@@ -261,7 +261,7 @@ nav
 .choose
 	min-height: 397px
 	padding: 54px 0 137px 0
-	background: url("../img/bg/mobile_bg.png") center center/cover no-repeat
+	background: url("../img/bg/mobile_bg.svg") center center/cover no-repeat
 	position: relative
 	.black_bg
 		position: absolute
@@ -330,7 +330,7 @@ nav
 .world
 	height: 720px
 	padding: 46px 0 50px 0
-	background: url("../img/bg/world_bg.png") center center/cover no-repeat
+	background: url("../img/bg/world_bg.svg") center center/cover no-repeat
 	.container
 		height: 100%
 		position: relative
@@ -349,7 +349,7 @@ nav
 		text-decoration: none
 
 footer
-	height: 155px
+	min-height: 155px
 	padding: 13px 20px 40px 20px
 	.footer
 		&_divider
@@ -372,11 +372,46 @@ footer
 			width: 156px
 			height: 35px
 			&_item
-				display: block
+				display: flex
+				justify-content: center
+				align-items: center
 				width: 35px
 				height: 35px
 				border-radius: 50%
 				background-color: #000
+				svg
+					fill: #fff
+
+		&_links
+			&_main
+				display: flex
+				justify-content: space-around
+				font-weight: 300
+				font-size: 15px
+				text-transform: uppercase
+				a
+					text-decoration: none
+					color: #070716
+			&_sub
+				margin-top: 8px
+				display: flex
+				justify-content: space-between
+				font-weight: 300
+				font-size: 11px
+				text-transform: uppercase
+				a
+					text-decoration: none
+					color: #999999
+			&_lang
+				display: block
+				margin: 0 auto
+				margin-top: 10px
+				text-align: center
+				color: $blue_color_3
+				font-weight: 400
+				font-size: 11px
+				text-transform: uppercase
+				text-decoration: none
 		&_store
 			display: flex
 			justify-content: space-between
