--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,423 +1,6 @@
-$blue_color_1: #1EACC7
-$blue_color_2: #1CA8C3
-$blue_color_3: #1FBAD6
-$red_color: #FF5656
-	
 * 
 	font-family: 'Roboto', sans-serif
 
-.label 
-	margin: 0 auto 
-	width: 115px 
-	height: 27px 
-	background: #000000 
-	font-weight: 400 
-	font-size: 11px 
-	text-align: center 
-	line-height: 27px 
-	text-transform: uppercase 
-	color: #FFFFFF 
-
-.title
-	margin: 0 
-	margin-top: 32px 
-	font-weight: 700 
-	font-size: 38px 
-	text-align: center 
-	text-transform: uppercase 
-	color: #222222
-
-.subtitle
-	margin: 0
-	font-weight: 400
-	font-size: 17px
-	text-align: center
-
-.label_white
-	background: #fff
-	color: #000
-
-.title_white, .subtitle_white
-	color:#fff
-
-.label_min
-	width: 79px
-	height: 27px
-
-header
-	position: relative
-	height: 50px
-
-nav 
-	position: fixed
-	width: 100%
-	top: 0 
-	z-index: 10
-	height: 52px 
-	background: #212121 
-
-.menu 
-	display: flex 
-	justify-content: space-between 
-	margin: 0 
-	padding: 14px 68px 
-	list-style-type: none 
-	&_link 
-		font-style: normal 
-		font-weight: 300 
-		font-size: 15px 
-		color: #FFFFFF 
-		text-decoration: none 
-	&_divider 
-		border-right: 2px dotted black 
-
-.subheader 
-	position: absolute 
-	top: 50px
-	width: 100% 
-	height: 85px 
-	background: rgba(0, 0, 0, .6) 
-	&_logo 
-		display: block 
-		max-width: 100% 
-		margin-top: 16px 
-	&_official 
-		opacity: 0.5 
-		margin-top: 6px 
-		line-height: 13px 
-		font-style: normal 
-		font-weight: 100 
-		font-size: 13px 
-		color: #FFFFFF 
-	&_btn 
-		margin-top: 19px 
-		width: 172px 
-		height: 46px 
-		background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%) 
-		box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12) 
-		border: none 
-		border-radius: 4px 
-		font-style: normal 
-		font-weight: 400 
-		font-size: 14px 
-		text-transform: uppercase 
-		color: #FFFFFF 
-		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21) 
-	&_call 
-		margin-top: 23px 
-		line-height: 12px 
-		font-style: normal 
-		font-weight: 300 
-		font-size: 12px 
-		text-align: right 
-		color: #FFFFFF 
-	&_phone 
-		margin-top: 8px 
-		line-height: 12px 
-		display: block 
-		font-style: normal 
-		font-weight: 400 
-		font-size: 22px 
-		text-transform: uppercase 
-		color: #FFFFFF 
-		text-decoration: none 
-		text-align: right 
-		&:hover 
-			color: #FFFFFF 
-			text-decoration: underline 
-
-.promo 
-	min-height: 800px 
-	padding: 143px 0 186px 0 
-	background: url("../img/bg/uber_bg.png") center center/cover no-repeat 
-	&_header 
-		margin: 0 
-		line-height: 50px 
-		font-weight: 900 
-		font-size: 60px 
-		text-align: center 
-		text-transform: uppercase 
-		color: #FFFFFF 
-	&_subheader 
-		margin: 0 
-		margin-top: 14px 
-		font-weight: 700 
-		font-size: 36px 
-		text-align: center 
-		text-transform: uppercase 
-		color: #FFFFFF 
-	&_descr 
-		margin-top: 16px 
-		font-weight: 400 
-		font-size: 18px 
-		line-height: 24px 
-		text-align: center 
-		color: #FFFFFF 
-	&_btn 
-		margin: 0 auto 
-		margin-top: 115px 
-		display: block 
-		width: 259px 
-		height: 63px 
-		background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%) 
-		box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12) 
-		border-radius: 4px 
-		border: none 
-		font-style: normal 
-		font-weight: 400 
-		font-size: 18px 
-		text-align: center 
-		text-transform: uppercase 
-		color: #FFFFFF 
-		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
-
-.reasons 
-	padding: 20px 0 64px 0
-	&_block 
-		display: flex 
-		justify-content: center 
-		align-items: center 
-		margin-top: 35px 
-	&_round 
-		margin-right: 25px 
-		display: flex 
-		justify-content: center 
-		align-items: center 
-		min-width: 113px 
-		height: 113px 
-		background: $blue_color_1
-		border-radius: 50% 
-	&_descr 
-		display: block 
-		width: 343px 
-		font-weight: 300 
-		font-size: 15px 
-		line-height: 21px 
-		color: #202020 
-	&_subtitle 
-		font-weight: 400 
-		font-size: 17px 
-		color: $blue_color_1
-
-.mobile
-	min-height:864px 
-	padding: 46px 0 60px 0
-	background: url("../img/bg/mobile_bg.svg") center center/cover no-repeat
-	.row
-		margin-top: 32px
-	&_item
-		position: relative
-		width: 320px
-		height: 280px
-		margin: 0 auto
-		margin-bottom: 20px
-		padding: 85px 0 34px 0
-		&_1
-			background: url("../img/card/card_1.png") center center/cover no-repeat
-		&_2
-			background: url("../img/card/card_2.png") center center/cover no-repeat
-		&_3
-			background: url("../img/card/card_3.png") center center/cover no-repeat
-		&_4
-			background: url("../img/card/card_4.png") center center/cover no-repeat
-		&_5
-			background: url("../img/card/card_5.png") center center/cover no-repeat
-		&_6
-			background: url("../img/card/card_6.png") center center/cover no-repeat
-		&_subtitle
-			text-align: center
-			font-weight: 400
-			font-size: 24px
-			line-height: 31px
-			text-transform: uppercase
-			color: #FFFFFF
-		&_plus
-			position: absolute
-			bottom: 34px
-			left: 50%
-			transform: translateX(-50%)
-			display: flex
-			justify-content: center
-			align-items: center
-			width: 30px
-			height: 30px
-			background-color: black
-			border-radius: 100%
-			&:after
-				content: ""
-				display: block
-				position: absolute
-				width: 14px
-				height: 2px
-				background: $blue_color_1
-			&:before
-				content: ""
-				display: block
-				position: absolute
-				width: 2px
-				height: 14px
-				background: $blue_color_1
-
-.choose
-	min-height: 397px
-	padding: 54px 0 137px 0
-	background: url("../img/bg/mobile_bg.svg") center center/cover no-repeat
-	position: relative
-	.black_bg
-		position: absolute
-		height: 502px
-		width: 100%
-		background-color: #070716
-		top: 0
-		z-index: 1
-	.container
-		z-index: 2
-		position: relative
-	&_img
-		display: block
-		margin: 0 auto
-		margin-top: 54px
-	&_descr
-		font-weight: 300
-		font-size: 17px
-		line-height: 24px
-		text-align: center
-		color: #222222
-
-.require
-	padding: 66px 0 57px 0
-	&_block
-		margin: 30px 0
-	&_title
-		color: $blue_color_2
-		font-weight: 400
-		font-size: 22px
-		line-height: 24px
-	&_list
-		max-width: 515px
-		list-style-type: none
-		padding: 0
-		margin: 0
-		padding-left: 57px
-		margin-top: 20px
-		font-weight: 300
-		font-size: 17px
-		line-height: 24px
-		li
-			margin-bottom: 10px
-			position: relative
-			&:before
-				content: ""
-				position: absolute
-				left: -31px
-				top: 2px
-				width: 21px
-				height: 21px
-				background: url("../img/icons/check/check_blue.svg")
-	&_descr
-		color: $blue_color_2
-		margin-top: 25px
-		font-weight: 300
-		font-size: 17px
-		line-height: 24px
-	.warning
-		.require_title
-			color: $red_color
-		.require_list
-			li:before
-				background: url("../img/icons/check/check_red.svg")
-
-.world
-	height: 720px
-	padding: 46px 0 50px 0
-	background: url("../img/bg/world_bg.svg") center center/cover no-repeat
-	.container
-		height: 100%
-		position: relative
-	&_link
-		position: absolute
-		bottom: 0
-		left: 50%
-		transform: translateX(-50%)
-		display: block
-		margin: 0 auto
-		color: $blue_color_3
-		font-weight: 400
-		font-size: 15px
-		text-align: center
-		text-transform: uppercase
-		text-decoration: none
-
-footer
-	min-height: 155px
-	padding: 13px 20px 40px 20px
-	.footer
-		&_divider
-			width: 300px
-			height: 4px
-			margin: 0 auto
-			background-color: $blue_color_3
-		&_wrapper
-			margin-top: 34px
-			display: flex
-			justify-content: space-between
-			>div
-				width: 33%
-				&:nth-child(3)
-					display: flex
-					justify-content: flex-end
-		&_social
-			display: flex
-			justify-content: space-between
-			width: 156px
-			height: 35px
-			&_item
-				display: flex
-				justify-content: center
-				align-items: center
-				width: 35px
-				height: 35px
-				border-radius: 50%
-				background-color: #000
-				svg
-					fill: #fff
-
-		&_links
-			&_main
-				display: flex
-				justify-content: space-around
-				font-weight: 300
-				font-size: 15px
-				text-transform: uppercase
-				a
-					text-decoration: none
-					color: #070716
-			&_sub
-				margin-top: 8px
-				display: flex
-				justify-content: space-between
-				font-weight: 300
-				font-size: 11px
-				text-transform: uppercase
-				a
-					text-decoration: none
-					color: #999999
-			&_lang
-				display: block
-				margin: 0 auto
-				margin-top: 10px
-				text-align: center
-				color: $blue_color_3
-				font-weight: 400
-				font-size: 11px
-				text-transform: uppercase
-				text-decoration: none
-		&_store
-			display: flex
-			justify-content: space-between
-			width: 296px
-			height: 27px
-			&_item
-				display: block
-
-
+@import "variables"
+@import "mixins"
+@import "general"
