--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -8,9 +8,9 @@
         &_subheader 
             font-size: 34px 
 
-@media (max-width: 1200px)
+@media (max-width: 1199px)
     .menu 
         &_item
-            padding-right: 12px
-        // &_link 
-        //     font-size: 14px
+            padding-right: 18px
+        &_link 
+            font-size: 14px
