--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,16 +1,41 @@
-@media (max-width: 1400px)
+@media (max-width: 1399.98px)
     .menu 
         &_item
             padding-right: 30px
+
     .promo 
         &_header 
             font-size: 55px 
         &_subheader 
             font-size: 34px 
 
-@media (max-width: 1199px)
+@media (max-width: 1199.98px)
+    .promo
+        padding-bottom: 115px
     .menu 
         &_item
             padding-right: 18px
         &_link 
             font-size: 14px
+
+    .reasons
+        &_descr
+            width: 315px
+
+    .mobile
+        &_item
+            width: 290px
+            height: 253.75px
+            margin: 0 15px
+            margin-bottom: 20px
+            padding-top: 70px
+            &_subtitle
+                font-size: 22px
+
+    .footer
+        // &_social
+        //     &_item
+
+        &_store
+            &_img
+                width: 70px
