--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -10,14 +10,13 @@
             font-size: 34px 
 
 @media (max-width: 1199.98px)
-    .promo
-        padding-bottom: 115px
     .menu 
         &_item
             padding-right: 18px
         &_link 
             font-size: 14px
-
+    .promo
+        padding-bottom: 115px
     .reasons
         &_descr
             width: 315px
@@ -31,11 +30,38 @@
             padding-top: 70px
             &_subtitle
                 font-size: 22px
+    footer
+        .footer
+            &_social
+                &_item
+                    width: 30px
+                    height: 30px
 
-    .footer
-        // &_social
-        //     &_item
+            &_store
+                &_img
+                    width: 70px
 
-        &_store
-            &_img
-                width: 70px
+@media (max-width: 991.98px)
+    .menu 
+        &_item
+            padding-right: 11px
+        &_link 
+            font-size: 10px
+    .subheader
+        &_official
+            font-size: 12px
+        &_phone
+            font-size: 19px
+        &_btn
+            margin-top: 25px
+            width: 136px
+            height: 34px
+            font-size: 12px
+
+    .promo
+        &_header
+            font-size: 34px
+        &_subheader
+            font-size: 24px
+        &_descr
+            font-size: 16px
