--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -30,28 +30,34 @@
             padding-top: 70px
             &_subtitle
                 font-size: 22px
-    footer
-        .footer
-            &_social
-                &_item
-                    width: 30px
-                    height: 30px
 
-            &_store
-                &_img
-                    width: 70px
+    .footer
+        &_social
+            &_item
+                width: 30px
+                height: 30px
+
+        &_store
+            &_img
+                width: 70px
 
 @media (max-width: 991.98px)
+
+    .title
+        font-size: 34px
+
     .menu 
         &_item
             padding-right: 11px
         &_link 
             font-size: 10px
     .subheader
+        &_logo
+            margin-top: 19px
         &_official
             font-size: 12px
         &_phone
-            font-size: 19px
+            font-size: 20px
         &_btn
             margin-top: 25px
             width: 136px
@@ -60,8 +66,103 @@
 
     .promo
         &_header
-            font-size: 34px
+            font-size: 40px
         &_subheader
-            font-size: 24px
+            font-size: 30px
         &_descr
             font-size: 16px
+
+    .reasons
+        &_block
+            flex-direction: column
+            align-items: center
+        &_round
+            margin-right: 0
+        &_subtitle
+            margin-top: 25px
+
+
+    .choose
+        &_img
+            margin-top: 105px
+
+
+    .footer
+        &_wrapper
+            flex-direction: column
+            align-items: center
+            &>div
+                width: auto
+            &>div:nth-child(1)
+                justify-content: center
+                order: 2
+                margin-top: 15px
+            &>div:nth-child(3)
+                justify-content: center
+                order: 3
+                margin-top: 17px
+        &_store
+            &_img
+                width: auto
+        &_social
+            &_item
+                width: 35px
+                height: 35px
+                    
+
+@media (max-width: 767.98px)
+    .menu
+        padding: 0
+        position: absolute
+        top: 0
+        left: -100%
+        width: 50%
+        height: 100vh
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        background: rgba(0,0 ,0 ,0.8 )
+        transition: 0.6s all
+        &_active
+            left: 0
+        &_item
+            border: none
+            padding: 0
+            width: 100%
+        &_link
+            display: block
+            font-size: 20px
+            width: inherit
+            text-align: center
+            margin: 10px 0
+
+    .hamburger
+        display: block
+        position: absolute
+        top: 50%
+        right: 17px
+        width: 30px
+        transform: translateY(-50%)
+        transition: 0.6s all
+        span
+            display: block
+            width: 100%
+            height: 3px
+            margin-bottom: 4px
+            background-color: #FFF
+            transition: 0.6s all
+            &:nth-child(2)
+                opacity: 100%
+            &:nth-child(3)
+                margin-bottom: 0
+        &_active
+            span
+                margin: 0
+                &:nth-child(1)
+                    transform: rotate(-45deg) translateY(4px)
+                &:nth-child(2)
+                    opacity: 0%
+                    // display: none
+                &:nth-child(3)
+                    transform: rotate(45deg) translateY(-4px)
+                
