--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -105,7 +105,7 @@ nav
 		color: #FFFFFF 
 	&_phone 
 		margin-top: 8px 
-		line-height: 12px 
+		line-height: 15px 
 		display: block 
 		font-style: normal 
 		font-weight: 400 
@@ -117,6 +117,9 @@ nav
 		&:hover 
 			color: #FFFFFF 
 			text-decoration: underline 
+
+.xs-visible
+	display: none
 
 .promo 
 	padding: 143px 0 186px 0 
@@ -260,7 +263,7 @@ nav
 		display: block
 		margin: 0 auto
 		margin-top: 54px
-		width: 80vw
+		width: 100%
 		max-width: 760px
 	&_descr
 		font-weight: 300
