--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -166,3 +166,17 @@
                 &:nth-child(3)
                     transform: rotate(45deg) translateY(-4px)
                 
+    .xs-hidden
+        display: none
+    .xs-visible
+        display: block
+
+    .subheader
+        &_phone
+            text-align: center
+            margin-top: 16px
+        &_btn
+            margin: 0 auto
+            margin-top: 10px
+            width: 140px
+            height: 28px
