--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -36,6 +36,9 @@
 	width: 79px
 	height: 27px
 
+.hamburger
+	display: none
+
 header
 	position: relative
 	height: 50px
@@ -45,11 +48,8 @@ nav
 	width: 100%
 	top: 0 
 	z-index: 10
-	height: 52px 
+	height: 50px 
 	background: #212121
-
-.hamburger
-	display: none
 
 .menu 
 	display: flex 
@@ -131,7 +131,9 @@ nav
 		font-size: 60px 
 		text-align: center 
 		text-transform: uppercase 
-		color: #FFFFFF 
+		color: #FFFFFF
+		br
+			display: none
 	&_subheader 
 		margin: 0 
 		margin-top: 14px 
@@ -140,6 +142,8 @@ nav
 		text-align: center 
 		text-transform: uppercase 
 		color: #FFFFFF 
+		br
+			display: none
 	&_descr 
 		margin-top: 16px 
 		font-weight: 400 
@@ -245,7 +249,6 @@ nav
 				background: $main_color
 
 .choose
-	min-height: 397px
 	padding: 54px 0 137px 0
 	background: url("../img/bg/mobile_bg.svg") center center/cover no-repeat
 	position: relative
