--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,182 +1,346 @@
 @media (max-width: 1399.98px)
-    .menu 
-        &_item
-            padding-right: 30px
+	.menu 
+		&_item
+			padding-right: 30px
 
-    .promo 
-        &_header 
-            font-size: 55px 
-        &_subheader 
-            font-size: 34px 
+	.promo 
+		&_header 
+			font-size: 55px 
+		&_subheader 
+			font-size: 34px 
 
 @media (max-width: 1199.98px)
-    .menu 
-        &_item
-            padding-right: 18px
-        &_link 
-            font-size: 14px
-    .promo
-        padding-bottom: 115px
-    .reasons
-        &_descr
-            width: 315px
+	.menu 
+		&_item
+			padding-right: 18px
+		&_link 
+			font-size: 14px
+	.promo
+		padding-bottom: 115px
+	.reasons
+		&_descr
+			width: 315px
 
-    .mobile
-        &_item
-            width: 290px
-            height: 253.75px
-            margin: 0 15px
-            margin-bottom: 20px
-            padding-top: 70px
-            &_subtitle
-                font-size: 22px
+	.mobile
+		&_item
+			width: 290px
+			height: 253.75px
+			margin: 0 15px
+			margin-bottom: 20px
+			padding-top: 70px
+			&_subtitle
+				font-size: 22px
 
-    .footer
-        &_social
-            &_item
-                width: 30px
-                height: 30px
+	.footer
+		&_social
+			&_item
+				width: 30px
+				height: 30px
 
-        &_store
-            &_img
-                width: 70px
+		&_store
+			&_img
+				width: 70px
 
 @media (max-width: 991.98px)
 
-    .title
-        font-size: 34px
+	.title
+		font-size: 34px
 
-    .menu 
-        &_item
-            padding-right: 11px
-        &_link 
-            font-size: 10px
-    .subheader
-        &_logo
-            margin-top: 19px
-        &_official
-            font-size: 12px
-        &_phone
-            font-size: 20px
-        &_btn
-            margin-top: 25px
-            width: 136px
-            height: 34px
-            font-size: 12px
+	.menu 
+		&_item
+			padding-right: 11px
+		&_link 
+			font-size: 10px
+	.subheader
+		&_logo
+			margin-top: 19px
+		&_official
+			font-size: 12px
+		&_phone
+			font-size: 20px
+		&_btn
+			margin-top: 25px
+			width: 136px
+			height: 34px
+			font-size: 12px
 
-    .promo
-        &_header
-            font-size: 40px
-        &_subheader
-            font-size: 30px
-        &_descr
-            font-size: 16px
+	.promo
+		&_header
+			font-size: 40px
+		&_subheader
+			font-size: 30px
+		&_descr
+			font-size: 16px
 
-    .reasons
-        &_block
-            flex-direction: column
-            align-items: center
-        &_round
-            margin-right: 0
-        &_subtitle
-            margin-top: 25px
-
-
-    .choose
-        &_img
-            margin-top: 105px
+	.reasons
+		&_block
+			flex-direction: column
+			align-items: center
+		&_round
+			margin-right: 0
+		&_subtitle
+			margin-top: 25px
 
 
-    .footer
-        &_wrapper
-            flex-direction: column
-            align-items: center
-            &>div
-                width: auto
-            &>div:nth-child(1)
-                justify-content: center
-                order: 2
-                margin-top: 15px
-            &>div:nth-child(3)
-                justify-content: center
-                order: 3
-                margin-top: 17px
-        &_store
-            &_img
-                width: auto
-        &_social
-            &_item
-                width: 35px
-                height: 35px
-                    
+	.choose
+		&_img
+			margin-top: 105px
+
+
+	.footer
+		&_wrapper
+			flex-direction: column
+			align-items: center
+			&>div
+				width: auto
+			&>div:nth-child(1)
+				justify-content: center
+				order: 2
+				margin-top: 15px
+			&>div:nth-child(3)
+				justify-content: center
+				order: 3
+				margin-top: 17px
+		&_store
+			&_img
+				width: auto
+		&_social
+			&_item
+				width: 35px
+				height: 35px
+					
 
 @media (max-width: 767.98px)
-    .menu
-        padding: 0
-        position: absolute
-        top: 0
-        left: -100%
-        width: 50%
-        height: 100vh
-        flex-direction: column
-        justify-content: center
-        align-items: center
-        background: rgba(0,0 ,0 ,0.8 )
-        transition: 0.6s all
-        &_active
-            left: 0
-        &_item
-            border: none
-            padding: 0
-            width: 100%
-        &_link
-            display: block
-            font-size: 20px
-            width: inherit
-            text-align: center
-            margin: 10px 0
+	.menu
+		padding: 0
+		position: absolute
+		top: 0
+		left: -100%
+		width: 50%
+		height: 100vh
+		flex-direction: column
+		justify-content: center
+		align-items: center
+		background: rgba(0,0 ,0 ,0.8 )
+		transition: 0.6s all
+		&_active
+			left: 0
+		&_item
+			border: none
+			padding: 0
+			width: 100%
+		&_link
+			display: block
+			font-size: 20px
+			width: inherit
+			text-align: center
+			margin: 10px 0
 
-    .hamburger
-        display: block
-        position: absolute
-        top: 50%
-        right: 17px
-        width: 30px
-        transform: translateY(-50%)
-        transition: 0.6s all
-        span
-            display: block
-            width: 100%
-            height: 3px
-            margin-bottom: 4px
-            background-color: #FFF
-            transition: 0.6s all
-            &:nth-child(2)
-                opacity: 100%
-            &:nth-child(3)
-                margin-bottom: 0
-        &_active
-            span
-                margin: 0
-                &:nth-child(1)
-                    transform: rotate(-45deg) translateY(4px)
-                &:nth-child(2)
-                    opacity: 0%
-                    // display: none
-                &:nth-child(3)
-                    transform: rotate(45deg) translateY(-4px)
-                
-    .xs-hidden
-        display: none
-    .xs-visible
-        display: block
+	.hamburger
+		display: block
+		position: absolute
+		top: 50%
+		right: 17px
+		width: 30px
+		transform: translateY(-50%)
+		transition: 0.6s all
+		span
+			display: block
+			width: 100%
+			height: 3px
+			margin-bottom: 4px
+			background-color: #FFF
+			transition: 0.6s all
+			&:nth-child(2)
+				opacity: 100%
+			&:nth-child(3)
+				margin-bottom: 0
+		&_active
+			span
+				margin: 0
+				&:nth-child(1)
+					transform: rotate(-45deg) translateY(4px)
+				&:nth-child(2)
+					opacity: 0%
+					// display: none
+				&:nth-child(3)
+					transform: rotate(45deg) translateY(-4px)
+				
+	.xs-hidden
+		display: none
+	.xs-visible
+		display: block
 
-    .subheader
-        &_phone
-            text-align: center
-            margin-top: 16px
-        &_btn
-            margin: 0 auto
-            margin-top: 10px
-            width: 140px
-            height: 28px
+	.subheader
+		&_phone
+			text-align: center
+			margin-top: 16px
+		&_btn
+			margin: 0 auto
+			margin-top: 10px
+			width: 140px
+			height: 28px
+
+	.promo
+		padding-bottom: 82px
+		&_header
+			line-height: 39px
+		&_descr
+			line-height: 21px
+		&_btn
+			margin-top: 72px
+			width: 210px
+			height: 50px
+			font-size: 16px
+
+	.title
+		font-size: 27px
+
+	.reasons
+		&_descr
+			width: 100%
+
+@media (max-width: 575.98px)
+	.menu
+		width: 80%
+
+	.hamburger
+		right: 10px
+		span
+			height: 2px
+			margin-bottom: 2px
+		&_active
+			span
+				margin: 0
+				&:nth-child(1)
+					transform: rotate(-45deg) translateY(2.5px)
+				&:nth-child(3)
+					transform: rotate(45deg) translateY(-2.5px)
+
+	.title
+		font-size: 16px
+		margin-top: 16px
+	.subtitle
+		font-size: 14px
+		margin-top: 9px
+
+
+	header
+		height: 30px
+	nav
+		height: 30px
+
+	.subheader 
+		top: 30px
+		height: 62px
+		&_official
+			display: none
+		&_phone
+			font-size: 12px
+			margin-top: 12px
+			line-height: 10px
+		&_btn
+			width: 110px
+			height: 22px
+			font-size: 10px
+			margin-top: 7px
+
+	.promo
+		padding: 102px 0 34px 0
+		&_header
+			font-size: 30px
+			line-height: 35px
+			br
+				display: inline
+		&_subheader
+			font-size: 20px
+			line-height: 23px
+			br
+				display: inline
+		&_descr
+			display: none
+
+
+	.reasons
+		padding-bottom: 38px
+		&_block
+			margin-top: 23px
+		&_round
+			width: 100px
+			height: 100px
+
+
+	.mobile
+		padding: 28px 0 9px 0
+		&_item
+			padding-top: 80px
+			padding-bottom: 21px
+			&_subtitle
+				font-size: 18px
+
+	.choose
+		padding: 24px 0 31px 0
+		background-color: #000
+		.title, .subtitle
+			display: none
+		.black_bg
+			display: none
+		&_img
+			margin-top: 36px
+		&_descr
+			color: #fff
+
+
+
+	.require
+		padding: 24px 0 15px 0
+		&_block
+			margin: 15px 0
+		&_title
+			font-size: 16px
+		&_list
+			font-size: 14px
+			line-height: 16px
+			margin-top: 5px
+			padding-left: 31px
+			li
+				margin-bottom: 5px
+				&::before
+					top:0
+		&_descr
+			font-size: 14px
+			margin-top: 15px
+			line-height: 16px
+
+
+	.world
+		padding: 24px 0 30px 0
+		height: 360px
+		&_link
+			width: 100%
+
+
+	footer
+		padding: 24px 18px 30px 18px
+	.footer
+		&_wrapper
+			&>div
+				&:nth-child(2)
+					width: 284px
+		&_links
+			&_main
+				font-size: 13px
+				justify-content: space-between
+			&_sub
+				width: 247px
+				margin: 0 auto
+				flex-wrap: wrap
+				margin-top: 4px
+				line-height: 23px
+		&_social
+			&_item
+				width: 32px
+				height: 32px
+		&_store
+			&_img
+				width: 80px
