--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -1,5 +1,5 @@
 @mixin blue_btn
-	background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%) 
+	background: $btn_bg
 	box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12) 
 	border: none 
 	border-radius: 4px 
