--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -68,7 +68,10 @@ nav
 		font-weight: 300 
 		font-size: 15px 
 		color: #FFFFFF 
-		text-decoration: none 
+		text-decoration: none
+		&:hover
+			color: #FFFFFF
+			text-decoration: underline 
 
 .subheader 
 	position: absolute 
@@ -338,6 +341,9 @@ nav
 		text-align: center
 		text-transform: uppercase
 		text-decoration: none
+		&:hover
+			color: $main_color
+			text-decoration: underline
 
 footer
 	min-height: 155px
@@ -375,6 +381,9 @@ footer
 			margin: 4px
 			border-radius: 50%
 			background-color: #000
+			transition: 0.6s all
+			&:hover
+				transform: scale(1.1)
 
 	&_links
 		&_main
@@ -385,7 +394,9 @@ footer
 			text-transform: uppercase
 			a
 				text-decoration: none
-				color: #070716
+				color: #070716			
+				&:hover
+					text-decoration: underline
 		&_sub
 			margin-top: 8px
 			display: flex
@@ -396,6 +407,8 @@ footer
 			a
 				text-decoration: none
 				color: #999999
+				&:hover
+					text-decoration: underline
 		&_lang
 			display: block
 			margin: 0 auto
@@ -406,9 +419,15 @@ footer
 			font-size: 11px
 			text-transform: uppercase
 			text-decoration: none
+			&:hover
+				color: $main_color
+				text-decoration: underline
 	&_store
 		display: flex
 		&_item
 			margin: 3px
 			height: min-content
 			display: block
+			transition: 0.6s all
+			&:hover
+				transform: scale(1.1)
